<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/btn_searchPage"
        android:icon="@drawable/ic_action_search"
        android:title="@string/btn_searchActnBarBtn"
        app:showAsAction="always"/>

    <item android:id="@+id/btn_favouritesPage"
        android:icon="@drawable/ic_action_important"
        android:title="@string/btn_favsActnBarBtn"
        app:showAsAction="always"/>

    <item android:id="@+id/btn_detailsPage"
        android:icon="@drawable/ic_action_storage"
        android:title="@string/btn_detailsActnBarBtn"
        app:showAsAction="always"/>


    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
