<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context="com.mycompany.testfood.IngredientsSearch"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homeButtonText"
            android:id="@+id/detailsHomeButton"
            android:onClick="goHome"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favouritesButtonText"
            android:id="@+id/detailsFavsButton"
            android:onClick="goToFavs"/>

        </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/searchButtonSelected"
        android:text="@string/buttonSelectedDisplayMessage"
        android:textSize="40sp"
        android:textStyle="italic"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="search box here"
        android:textSize="30sp"
        android:id="@+id/searchPlaceHolder" />

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ingredients:"
        android:textSize="30sp"
        android:id="@+id/ingredientsHeading" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="193dp"
        android:id="@+id/ingredientsListView" />


</LinearLayout>
